--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "body-parser": "^1.18.2",
     "boom": "^7.2.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "ejs": "~2.5.7",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
     "jsonwebtoken": "^8.2.1",
     "knex": "^0.14.4",
+    "method-override": "^2.3.10",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
     "passport-strava-oauth2": "^0.1.3",
     "pg": "^7.4.1"
   },
